# eo-mlir-test

./: .gitignore  CMakeLists.txt  README.md
eo-opt/: CMakeLists.txt  eo-opt.cpp
include/: CMakeLists.txt
include/Eo/: CMakeLists.txt  EoDialect.h  EoDialect.tb  EoDialect.td  EoOps.h  EoOps.td
lib/: CMakeLists.txt
lib/Eo/: CMakeLists.txt  EoDialect.cpp  EoOps.cpp
test/resources/xmir-files/: if.xmir  true.xmir
